--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
   ],
   "devDependencies": {
     "terser": "^3.14.1"
-  }
+  },
+  "homepage": "https://notifier-staging.tokopedia.com/imt-fe"
 }
